...
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController title="Home" id="9pv-A4-QxB" customClass="MainViewController" customModule="Quiz" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
...
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Hhw-N9-BIu">
                                        <subviews>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_big" translatesAutoresizingMaskIntoConstraints="NO" id="l91-i4-9Bx">
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="150" id="9IO-Ax-3Oa">
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                <state key="normal" title="Choose a topic" backgroundImage="ButtonBackgroundStroke"/>
                                                <variation key="widthClass=regular">
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                        <state key="normal" title="Start" backgroundImage="ButtonBackground">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <state key="normal" title="Finish Quiz" backgroundImage="ButtonBackground">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
                                        <state key="normal" title="Exit" backgroundImage="ButtonBackground">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Choose a Topic" id="z6F-mR-JPR">
                        <barButtonItem key="backBarButtonItem" title="Back" id="oDG-kH-qDN"/>
                    </navigationItem>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Statistics" image="Statistics" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="barChartDateLabel" destination="ExB-wX-pEd" id="QzA-TK-Ady"/>
...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3fg-eu-rVj">
                                <constraints>
                                    <constraint firstAttribute="width" constant="245" id="bIy-Ew-fKf"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                <state key="normal" title="Sign Up" backgroundImage="ButtonBackground">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="35" id="yrF-bf-fC3"/>
                                </constraints>
                                <state key="normal" image="Close"/>
                                <connections>
                                    <segue destination="seu-1b-eDg" kind="unwind" unwindAction="unwindToLogInScreen:" id="3xS-eP-f8k"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N23-5M-BwD">
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
...
        <scene sceneID="2QA-Rc-Ven">
            <objects>
                <viewController storyboardIdentifier="Login" id="RoE-8B-I3c" customClass="LoginViewController" customModule="Quiz" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="q74-4Q-B7v"/>
...
            <objects>
                <navigationController id="Yjc-ql-Weo" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Preferences" image="Preferences" id="8aj-Ye-pLG"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xaX-jh-kDu">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpp-Uw-j2u">
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                    <state key="normal" title="Log Out"/>
                                                    <connections>
                                                        <action selector="LogOutButtonPressed:" destination="y2Y-wK-tGQ" eventType="touchUpInside" id="LgW-Ja-l0K"/>
...
