...
        //Check online connectivity
        if !CloudLink.isConnected(){
            title = NSLocalizedString("No connection", comment: "")
            message = NSLocalizedString("You need an internet connection to be able to log in", comment: "")
            // Validate the text fields
        } else if username.characters.count < 4 {
            title = NSLocalizedString("Invalid", comment: "")
            message = NSLocalizedString("Username must be greater than 4 characters", comment: "")
        } else if password.characters.count < 6 {
            title = NSLocalizedString("Invalid", comment: "")
            message = NSLocalizedString("Password must be greater than 6 characters", comment: "")
        } else {
            return true
...
        onboardingVC.shouldBlurBackground = true
        onboardingVC.shouldFadeTransitions = true
        
        onboardingVC.allowSkipping = true
        onboardingVC.skipHandler = { self.completeOnboarding() }
        let skipButton = UIButton()
        skipButton.setTitle(NSLocalizedString("Skip", comment: "Text on Skip button"), forState: .Normal)
        skipButton.addTarget(self, action: #selector(LoginViewController.completeOnboarding), forControlEvents: .TouchUpInside)
        onboardingVC.skipButton = skipButton
        
        return onboardingVC
    }
    
...
