...
    /**
     Brings up an alertview asking the user if he/she wants to log out
     - parameter sender: user interaction
     */
    @IBAction func logOutButtonPressed(sender: AnyObject) {
        
        let title = NSLocalizedString("Log Out?", comment: "")
        let message = NSLocalizedString("Are you sure you want to log out?", comment: "")
        let logOut = NSLocalizedString("Log Out", comment: "")
        let cancel = NSLocalizedString("Cancel", comment: "")
        
        let alertController = UIAlertController(title: title, message:
            message, preferredStyle: UIAlertControllerStyle.Alert)
...
